Core updated: - app force ssl initial. - update gitlab ticket.

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ APP_ENV=local
 APP_KEY=base64:nO2W99mkn0yAei8yloDlbOHCfKqex/WelBb5F6uQ0tk=
 APP_DEBUG=true
 APP_URL=http://localhost
+APP_FORCE_SSL=false
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
